--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
 .cover__overlay {
-    background-image: url("../../../Images/cover-route-66.jpg");
+    background-image: url("../../../images/cover-route-66.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
